<resources>
    <string name="app_name">CarpoolingApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm password</string>
    <string name="register">Register</string>
    <string name="register_question">No account? Register now!</string>
    <string name="welcome">Welcome, </string>
    <string name="vehicle">Insert vehicle:</string>
    <string name="payment">Insert payment details:</string>
    <string name="submit">Save</string>
    <string name="passengers">Passengers</string>
    <string name="welcome_driver">Welcome,</string>
    <string name="logout">Logout</string>
    <string name="pinLocation">Pin locations on map</string>
    <string name="insertPrice">Insert price:</string>
    <string name="insertDate">Insert date:</string>
    <string name="insertTime">Insert time:</string>
    <string name="choose">Choose</string>
    <string name="details">Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>