<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/insertPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/insertPrice"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/insertDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/insertDate"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/insertPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/insertTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/insertTime"
        android:inputType="time"
        app:layout_constraintTop_toBottomOf="@id/insertDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/saveRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/insertTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
